--- a/MIST143_Traveler/wwwroot/css/ProductListPage2.css
+++ b/MIST143_Traveler/wwwroot/css/ProductListPage2.css
@@ -207,7 +207,7 @@
     display: flex;
     align-content: center;
     flex-wrap: wrap;
-    max-width: 1200px;
+    max-width: 1159px;
     margin: auto;
     padding: 40px;
 }
@@ -730,9 +730,12 @@ a {
 .acchei{
     height:48px;
 }
-.frmcheckin {
-    vertical-align:auto;
+.accordion-btn {
+    width:83%;
 }
-.search-result-activity-container{
-    width:100%;
+.frmcheckin {
+    vertical-align: auto;
+}
+.search-result-activity-container {
+    width: 100%;
 }
